base/triqui-app/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triqui-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: triqui-app
  template:
    metadata:
      labels:
        app: triqui-app
    spec:
      containers:
      - name: triqui-app
        image: ghcr.io/bicora/triqui:latest
        ports:
          - containerPort: 3000
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: triqui-app-svc
spec:
  type: ClusterIP
  selector:
    app: triqui-app
  ports:
    - port: 80
      targetPort: 3000
