base/triqui-app/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: triqui-app-ingress
  namespace: triqui
spec:
  ingressClassName: nginx
  rules:
    - host: acoini.com
      http:
        paths:
          - backend:
              service:
                name: triqui-app-svc
                port:
                  number: 80
            path: /(.*)
            pathType: Prefix
    - host: acoini.com
      http:
        paths:
          - backend:
              service:
                name: triqui-app-svc
                port:
                  number: 80
            path: /(.*)
            pathType: Prefix
